--- a/components/r-shell.html
+++ b/components/r-shell.html
@@ -60,7 +60,7 @@
     <link rel="next" href="switch.html" />
     
     
-    <link rel="prev" href="markdown.html" />
+    <link rel="prev" href="function-plot.html" />
     
 
     </head>
@@ -200,20 +200,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.3" data-path="markdown.html">
-            
-                <a href="markdown.html">
-            
-                    
-                    Markdown
-            
-                </a>
-            
-
-            
-        </li>
-    
-        <li class="chapter active" data-level="1.4.4" data-path="r-shell.html">
+        <li class="chapter active" data-level="1.4.3" data-path="r-shell.html">
             
                 <a href="r-shell.html">
             
@@ -226,7 +213,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.5" data-path="switch.html">
+        <li class="chapter " data-level="1.4.4" data-path="switch.html">
             
                 <a href="switch.html">
             
@@ -239,7 +226,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.6" data-path="latex.html">
+        <li class="chapter " data-level="1.4.5" data-path="latex.html">
             
                 <a href="latex.html">
             
@@ -252,7 +239,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.7" data-path="video-player.html">
+        <li class="chapter " data-level="1.4.6" data-path="video-player.html">
             
                 <a href="video-player.html">
             
@@ -370,7 +357,7 @@
 
             
                 
-                <a href="markdown.html" class="navigation navigation-prev " aria-label="Previous page: Markdown">
+                <a href="function-plot.html" class="navigation navigation-prev " aria-label="Previous page: Function Plot">
                     <i class="fa fa-angle-left"></i>
                 </a>
                 
@@ -386,7 +373,7 @@
     <script>
         var gitbook = gitbook || [];
         gitbook.push(function() {
-            gitbook.page.hasChanged({"page":{"title":"R Shell","level":"1.4.4","depth":2,"next":{"title":"Switch","level":"1.4.5","depth":2,"path":"components/switch.md","ref":"components/switch.md","articles":[]},"previous":{"title":"Markdown","level":"1.4.3","depth":2,"path":"components/markdown.md","ref":"components/markdown.md","articles":[]},"dir":"ltr"},"config":{"plugins":["edit-link"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"highlight":{},"search":{},"lunr":{"maxIndexSize":1000000},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/r-shell.md","mtime":"2016-07-22T20:26:58.557Z","type":"markdown"},"gitbook":{"version":"3.1.1","time":"2016-07-23T22:04:15.173Z"},"basePath":"..","book":{"language":""}});
+            gitbook.page.hasChanged({"page":{"title":"R Shell","level":"1.4.3","depth":2,"next":{"title":"Switch","level":"1.4.4","depth":2,"path":"components/switch.md","ref":"components/switch.md","articles":[]},"previous":{"title":"Function Plot","level":"1.4.2","depth":2,"path":"components/function-plot.md","ref":"components/function-plot.md","articles":[]},"dir":"ltr"},"config":{"plugins":["edit-link"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"highlight":{},"search":{},"lunr":{"maxIndexSize":1000000},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/r-shell.md","mtime":"2016-07-22T20:26:58.557Z","type":"markdown"},"gitbook":{"version":"3.1.1","time":"2016-08-06T12:01:58.861Z"},"basePath":"..","book":{"language":""}});
         });
     </script>
 </div>
